--- a/src/app/shared/components/main/feed/posts/posts.component.html
+++ b/src/app/shared/components/main/feed/posts/posts.component.html
@@ -24,8 +24,9 @@
                                                             width="42"
                                                             style="position: absolute; top: -5px; left: -5px; width: 42px; height: 42px;"
                                                         ></canvas>
-                                                        <span #asProfileImageRef
-                                                            
+                                                        <span 
+                                                            (mouseover)="mouseOver()" (mouseleave)="mouseLeave()"
+                                                            #asProfileImageRef
                                                             class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
                                                             role="link"
                                                             tabindex="-1"
@@ -319,7 +320,7 @@
                                                         class="x9f619 xjbqb8w x1lliihq x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                                                     >
                                                         <div class="xt0psk2">
-                                                            <div class="xt0psk2" (mouseenter)="mouseenter(true)" (mouseleave)="mouseenter(false)">
+                                                            <div class="xt0psk2">
                                                                 <a
                                                                     href=""
                                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz notranslate _a6hd"
@@ -498,9 +499,10 @@
  <!-- Información flotante start -->
 <div >
     <div >
-        <div  (mouseleave)="removeDisplay(false)">
+        <div #asParentDisplay>
             <!-- <div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" [ngStyle]="{'transform': 'translate(82px, '+this.pageY+'px)' }" #asInfoUser> -->
-            <div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="transform: translate(82px, 255px); border: 1px solid red;" #asParentInfoUser >
+            <!--<div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="transform: translate(82px, 255px); border: 1px solid red;" #asChildrenDisplay >-->
+            <div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="border: 1px solid red;" #asChildrenDisplay >
                 <div class="xvbhtw8 x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1rj4ezl x1n2onr6 xfr5jun xexx8yu x4uap5 x18d9i69 xkhd6sd">
                     <div class="x6s0dn4 xrvj5dj x19g8pj0 x1dh5ka xyamay9 x1l90r2v x1mu97ne">
                         <div>
