Cambios en children y parent

--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -1,4 +1,4 @@
-<section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r xg6iff7">
+<section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r xg6iff7" style="border: 2px solid lightseagreen;">
     <!-- === Main start === -->
         <main class="x78zum5 xdt5ytf x1iyjqo2 x182iqb8 xvbhtw8" role="main">
             <div>
@@ -42,7 +42,8 @@
     <!-- === / Main end === -->
 
     <!-- --- -->
-    <!-- --- -->
+
+    <!-- -- -->
 
     <!-- === Footer Start Start === -->
         <div style="order: 5;">
