--- a/src/app/shared/components/main/feed/posts/posts.component.html
+++ b/src/app/shared/components/main/feed/posts/posts.component.html
@@ -1,9 +1,9 @@
 <!-- Post start -->
-<div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1uhb9sk x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x6s0dn4 x1oa3qoh x1nhvcw1" style=" border: 1px solid green;" #asSuperParentPost>
+<div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1uhb9sk x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x6s0dn4 x1oa3qoh x1nhvcw1" style=" border: 1px solid green;">
     <div class="xh8yej3" style="max-width: 470px;">
         <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh xw7yly9 x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
             <div>
-                <div style="position: relative; display: flex; flex-direction: column; padding-bottom: 4119px; padding-top: 0;" style="width: 100%; border: 1px solid lightcoral;" #asParentPost>
+                <div style="position: relative; display: flex; flex-direction: column; padding-bottom: 4119px; padding-top: 0;" style="width: 100%; border: 1px solid lightcoral;">
                     <article class="_aggc _aatb _aatc _aate _aatf _aath _aati" tabindex="-1" role="presentation">
                         <div
                             style="max-height: inherit; max-width: inherit;"
@@ -25,8 +25,6 @@
                                                             style="position: absolute; top: -5px; left: -5px; width: 42px; height: 42px;"
                                                         ></canvas>
                                                         <span 
-                                                            (mouseover)="mouseOver()" (mouseleave)="mouseLeave()"
-                                                            #asProfileImageRef
                                                             class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
                                                             role="link"
                                                             tabindex="-1"
@@ -56,6 +54,7 @@
                                                                 <div class="xt0psk2">
                                                                     <div class="xt0psk2">
                                                                         <a  
+                                                                            
                                                                             #asUsernameElementRef
                                                                             class="x1i10hfl xjqpnuy xa49m3k xqeqjp1 x2hbi6w xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x1lku1pv x1a2a7pz x6s0dn4 xjyslct x1ejq31n xd10rxx x1sy0etr x17r0tee x9f619 x1ypdohk x1i0vuye xwhw2v2 xl56j7k x17ydfre x1f6kntn x2b8uid xlyipyv x87ps6o x14atkfc x1d5wrs8 x972fbf xcfux6l x1qhh985 xm0m39n xm3z3ea x1x8b98j x131883w x16mih1h xt7dq6l xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 xjbqb8w x1n5bzlp xqnirrm xj34u2y x568u83 x3nfvp2"
                                                                         >
@@ -497,11 +496,9 @@
 
 
  <!-- Información flotante start -->
-<div >
+<!-- <div >
     <div >
         <div #asParentDisplay>
-            <!-- <div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" [ngStyle]="{'transform': 'translate(82px, '+this.pageY+'px)' }" #asInfoUser> -->
-            <!--<div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="transform: translate(82px, 255px); border: 1px solid red;" #asChildrenDisplay >-->
             <div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="border: 1px solid red;" #asChildrenDisplay >
                 <div class="xvbhtw8 x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1rj4ezl x1n2onr6 xfr5jun xexx8yu x4uap5 x18d9i69 xkhd6sd">
                     <div class="x6s0dn4 xrvj5dj x19g8pj0 x1dh5ka xyamay9 x1l90r2v x1mu97ne">
@@ -653,5 +650,5 @@
             </div>
         </div>
     </div>
-</div> 
+</div>  -->
 <!-- / Información flotante end -->
