--- a/src/app/shared/components/util/over/display-profile/display-profile.component.html
+++ b/src/app/shared/components/util/over/display-profile/display-profile.component.html
@@ -1,7 +1,7 @@
 <!-- Información flotante start -->
 
-<div >
-    <div  class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk"  style="transform: translate(82px, 255px); border: 1px solid red;">
+<!-- <div > -->
+    <!-- <div  class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk"  style="transform: translate(82px, 255px); border: 1px solid red;"> -->
         <div class="xvbhtw8 x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1rj4ezl x1n2onr6 xfr5jun xexx8yu x4uap5 x18d9i69 xkhd6sd">
             <div class="x6s0dn4 xrvj5dj x19g8pj0 x1dh5ka xyamay9 x1l90r2v x1mu97ne">
                 <div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    <!-- </div> -->
+<!-- </div> -->
 
 <!-- / Información flotante end -->
