--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -477,7 +477,7 @@
                             <div>
                                 <div>
                                     <div>
-                                        <div class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="transform: translate(699px, 208px);border: 1px solid red;">
+                                        <div *ngIf="this.displayViewinfoProfile" class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk" style="transform: translate(699px, 208px);border: 1px solid red;">
                                             <!-- <div class="xvbhtw8 x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1rj4ezl x1n2onr6 xfr5jun xexx8yu x4uap5 x18d9i69 xkhd6sd">
                                                 <div class="x6s0dn4 xrvj5dj x19g8pj0 x1dh5ka xyamay9 x1l90r2v x1mu97ne">
                                                     <div>
@@ -633,7 +633,6 @@
                             <!-- / Información flotante end -->
 
                             <!-- Show More Start -->
-                            <!-- <div #asMorenav> -->
                             <div *ngIf="this.displayShowMore">
                                 <div>
                                     <div>
