--- a/src/app/shared/components/main/feed/posts/posts.component.html
+++ b/src/app/shared/components/main/feed/posts/posts.component.html
@@ -24,7 +24,7 @@
                                                             width="42"
                                                             style="position: absolute; top: -5px; left: -5px; width: 42px; height: 42px;"
                                                         ></canvas>
-                                                        <span 
+                                                        <span  (mouseover)="this.mouseOver('id')"
                                                             class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
                                                             role="link"
                                                             tabindex="-1"
