--- a/src/app/shared/components/util/over/display-profile/display-profile.component.html
+++ b/src/app/shared/components/util/over/display-profile/display-profile.component.html
@@ -2,15 +2,16 @@
 
 <!-- <div > -->
     <!-- <div  class="xu96u03 xm80bdy x10l6tqk x13vifvy xfbpl4g x127lhb5 xa3vuyk"  style="transform: translate(82px, 255px); border: 1px solid red;"> -->
-        <div class="xvbhtw8 x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1rj4ezl x1n2onr6 xfr5jun xexx8yu x4uap5 x18d9i69 xkhd6sd">
+        <div class="xvbhtw8 x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1rj4ezl  xfr5jun xexx8yu x4uap5 x18d9i69 xkhd6sd"> <!-- Delete clas -->
             <div class="x6s0dn4 xrvj5dj x19g8pj0 x1dh5ka xyamay9 x1l90r2v x1mu97ne">
+
                 <div>
                     <div class="x6s0dn4 xrvj5dj xjv0b96 x1wdtju6 x1swvt13 x1pi30zi">
                         <div>
                             <div class="_aarf _aarg" aria-disabled="false" role="button" tabindex="0" style="cursor: pointer;">
                                 <canvas class="_aarh" height="66" width="66" style="position: absolute; top: -5px; left: -5px; width: 66px; height: 66px;"></canvas>
                                 <span 
-                                    class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
+                                    class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62  x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
                                     role="link"
                                     tabindex="-1"
                                     style="width: 56px; height: 56px;"
@@ -121,13 +122,13 @@
                         <div class="x78zum5">
                             <div class="x1iyjqo2 xw3qccf x1ncir08">
                                 <div
-                                    class="x1i10hfl xjqpnuy xa49m3k xqeqjp1 x2hbi6w x972fbf xcfux6l x1qhh985 xm0m39n xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli xexx8yu x18d9i69 x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x1lku1pv x1a2a7pz x6s0dn4 xjyslct x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1ejq31n xd10rxx x1sy0etr x17r0tee x9f619 x1ypdohk x78zum5 x1i0vuye xwhw2v2 x10w6t97 xl56j7k x17ydfre x1f6kntn x1swvt13 x1pi30zi x2b8uid xlyipyv x87ps6o x9bdzbf x1n2onr6 x1d5wrs8 xh8yej3 x1tu34mt xzloghq"
+                                    class="x1i10hfl xjqpnuy xa49m3k xqeqjp1 x2hbi6w x972fbf xcfux6l x1qhh985 xm0m39n xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli xexx8yu x18d9i69 x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x1lku1pv x1a2a7pz x6s0dn4 xjyslct x1lq5wgf xgqcy7u x30kzoy x9jhf4c x1ejq31n xd10rxx x1sy0etr x17r0tee x9f619 x1ypdohk x78zum5 x1i0vuye xwhw2v2 x10w6t97 xl56j7k x17ydfre x1f6kntn x1swvt13 x1pi30zi x2b8uid xlyipyv x87ps6o x9bdzbf  x1d5wrs8 xh8yej3 x1tu34mt xzloghq"
                                     role="button"
                                     tabindex="0"
                                 >
                                     <span class="x6s0dn4 x3nfvp2">
                                         <span class="x1emribx">
-                                            <svg aria-label="" class="x1lliihq x1n2onr6" color="rgb(255, 255, 255)" fill="rgb(255, 255, 255)" height="20" role="img" viewBox="0 0 24 24" width="20">
+                                            <svg aria-label="" class="x1lliihq " color="rgb(255, 255, 255)" fill="rgb(255, 255, 255)" height="20" role="img" viewBox="0 0 24 24" width="20">
                                                 <title></title>
                                                 <line fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="2" x1="22" x2="9.218" y1="3" y2="10.083"></line>
                                                 <polygon fill="none" points="11.698 20.334 22 3.001 2 3.001 9.218 10.084 11.698 20.334" stroke="currentColor" stroke-linejoin="round" stroke-width="2"></polygon>
@@ -139,7 +140,7 @@
                             </div>
                             <div class="x1iyjqo2 xsgj6o6 x1ncir08">
                                 <button class="_acan _acap _acaq _acat _aj1-" type="button">
-                                    <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x150jy0e x1e558r4 x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s x1q0g3np xqjyukv x6s0dn4 x1oa3qoh xl56j7k" style="height: 100%;">
+                                    <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x150jy0e x1e558r4  x1plvlek xryxfnj x1c4vz4f x2lah0s x1q0g3np xqjyukv x6s0dn4 x1oa3qoh xl56j7k" style="height: 100%;">
                                         <div class="_aacl _aaco _aacw _aad6 _aade">Siguiendo</div>
                                     </div>
                                 </button>
