--- a/src/app/shared/components/main/feed/posts/posts.component.html
+++ b/src/app/shared/components/main/feed/posts/posts.component.html
@@ -4,7 +4,8 @@
         <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh xw7yly9 x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
             <div>
                 <!--  style="width: 100%; border: 1px solid lightcoral;" -->
-                <div style="position: relative; display: flex; flex-direction: column; padding-bottom: 4119px; padding-top: 0;">
+                <!-- padding-bottom: 4119px; se va cambiando cuando baja el scroll -->
+                <div style="position: relative; display: flex; flex-direction: column; padding-bottom: 10px; padding-top: 0;">
                     <article class="_aggc _aatb _aatc _aate _aatf _aath _aati" tabindex="-1" role="presentation">
                         <div
                             style="max-height: inherit; max-width: inherit;"
@@ -500,11 +501,12 @@
 [left]="targetOverlay.left"
 [top]="targetOverlay.top"
 [width]="targetOverlay.width">
+<!-- J48HHA -->
 </app-overlay>
 
 
 
- <!-- Información flotante start -->
+<!-- Información flotante start -->
 <!-- <div >
     <div >
         <div #asParentDisplay>
