--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -14,6 +14,7 @@
 
                             <!-- Post Start -->        
                                 <app-posts (mouseOverEvent)="this.mouseOverHeaderPost($event)" ></app-posts>
+                                <app-posts (mouseOverEvent)="this.mouseOverHeaderPost($event)" ></app-posts>
                             <!-- / Post end -->
                         </div>
                     <!-- / === Feed End === -->
