--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -1,5 +1,5 @@
 
-<section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r xg6iff7" style="border: 2px solid lightseagreen;">
+<section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r xg6iff7">
     <!-- === Main start === -->
         <main class="x78zum5 xdt5ytf x1iyjqo2 x182iqb8 xvbhtw8" role="main">
             <div>
@@ -13,7 +13,6 @@
                             <!-- / Stories end -->
 
                             <!-- Post Start -->        
-                                <app-posts (mouseOverEvent)="this.mouseOverHeaderPost($event)" ></app-posts>
                                 <app-posts (mouseOverEvent)="this.mouseOverHeaderPost($event)" ></app-posts>
                             <!-- / Post end -->
                         </div>
