--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -1,6 +1,10 @@
 <div id="mount_0_0_9V">
     <div>
         <div>
+            <!-- Cambiar : 
+                x9f619 x1n2onr6 x1ja2u2z
+                x9f619 x1ja2u2z x1pq812k x5yr21d xw2csxc x1odjw0f xixxii4 x1rohswg x17qophe x13vifvy xh8yej3 xfk6m8 x1yqm8si xjx87ck 
+            -->
             <div class="x9f619 x1n2onr6 x1ja2u2z">
                 <div class="x78zum5 xdt5ytf x1n2onr6 x1ja2u2z">
                     <div class="x78zum5 xdt5ytf x1n2onr6">
@@ -438,7 +442,7 @@
                                                     </div>
                                                 </div>
 
-                                                <!-- Barra lateral de búsqueda -->
+                                                <!-- Barra lateral de búsqueda start -->
                                                 <div class="x10l6tqk x1u3tz30 x1ja2u2z" #asSideSearch *ngIf="this.displaySideSearch">
                                                     <div class="xvbhtw8 xvb8j5 x9f619 x78zum5 xdt5ytf x1dr59a3 x1odjw0f xish69e x1y1aw1k x4uap5 xwib8y2 xkhd6sd xzmilaz x168nmei xoqspk4 x12v9rci xo71vjh x1n2onr6 x1zvrr1">
                                                         <div class="xh8yej3 x5yr21d x78zum5 xdt5ytf x10wlt62" style="opacity: 1;">
@@ -484,6 +488,15 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Display option posts start -->
+            <!-- <div>
+                <div>
+                    <app-option-post></app-option-post>
+                </div>
+            </div> -->
+            <!-- Display option posts end -->
+
         </div>
     </div>
 </div>
