--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -5,8 +5,8 @@
             <div>
                 <section class="_aalv _akmq _akm0" #asSectionFeed>
 
-                    <!-- === Feed Start _aam1 _akej _akmr === -->
-                        <div class="_aam1 _akej _akmr" #asFeed >
+                    <!-- === Feed Start _aam1 _akej _akmr === style="transform:none" -->
+                        <div class="_aam1 _akej _akmr" #asFeed>
                             <div class="_ab6o _ab6q"></div>
                             <!-- Stories start -->
                                 <app-stories></app-stories>
