--- a/src/app/shared/components/main/feed/posts/posts.component.html
+++ b/src/app/shared/components/main/feed/posts/posts.component.html
@@ -25,7 +25,7 @@
 <!-- / Overlay End -->
 
 <!-- / Información flotante star -->
-<div>
+<!-- <div>
     <div>
         <div #asParentDisplay (mouseover)="this.mouseOverDisplay(true)" (mouseleave)="this.mouseOverDisplay(false)">
             <div 
@@ -36,14 +36,7 @@
             </div>
         </div>
     </div>
-</div> 
+</div>  -->
 <!-- / Información flotante end -->
 
- <!-- Display option posts start -->
- <div>
-    <div>
-        <app-option-post></app-option-post>
-    </div>
-</div>
-<!-- Display option posts end -->
 
