--- a/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
+++ b/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
@@ -78,7 +78,8 @@
                     </div>
                 </header>
                 <div class="_aasm _aasn _agh1">
-                    <button class="_abl-" type="button" (click)="this.showOption()">
+                    <!-- (click)="this.showOption()" -->
+                    <button class="_abl-" type="button" (click)="this.showOption()" (blur)="this.hideOption()">
                         <div class="_abm0 _abl_">
                             <div
                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x6s0dn4 x1oa3qoh xl56j7k"
