--- a/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
+++ b/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
@@ -416,7 +416,7 @@
                                 <div class="_akhn">
                                     <div class="xo1ph6p xexx8yu x4uap5 x18d9i69 xkhd6sd">
                                         <div>
-                                            <button class="_abl- _abm2" type="button">
+                                            <button class="_abl- _abm2" type="button" (click)="displayEmojis(true)" (blur)="displayEmojis(false)" #asButtonEmojisPostRef >
                                                 <div class="_abm0 _abl_">
                                                     <svg
                                                         aria-label="Emoticono"
