--- a/src/styles.css
+++ b/src/styles.css
@@ -309,6 +309,10 @@ img {
     display: block;
 }
 
+._abl_ svg:hover {
+    fill: rgba(169, 167, 167, 0.945);
+}
+
 ._aarf {
     align-items: center;
     align-self: center;
