--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -501,7 +501,8 @@
                                 <div *ngIf="this.displayShowMore">
                                     <div>
                                         <div>
-                                            <div class="xu96u03 xm80bdy x10l6tqk x13vifvy" #asMoreBoddy style="position: fixed; transform: translate(13px, 805px) translate(0px, -100%);">
+                                            <!-- style="position: fixed; transform: translate(13px, 805px) translate(0px, -100%);" -->
+                                            <div class="xu96u03 xm80bdy x10l6tqk x13vifvy" #asMoreBoddy [ngStyle]="{ 'position':'fixed', 'transform': 'translate('+this.clientX+'px,'+this.clientY+'px'}">
                                                 <app-morenav></app-morenav>
                                             </div>
                                         </div>
