--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -452,19 +452,7 @@
                                                     </div>
                                                     <!-- Barra lateral de búsqueda start -->
                                                         <div class="x10l6tqk x1u3tz30 x1ja2u2z" #asSideSearch *ngIf="this.displaySideSearch">
-                                                            <div class="xvbhtw8 xvb8j5 x9f619 x78zum5 xdt5ytf x1dr59a3 x1odjw0f xish69e x1y1aw1k x4uap5 xwib8y2 xkhd6sd xzmilaz x168nmei xoqspk4 x12v9rci xo71vjh x1n2onr6 x1zvrr1">
-                                                                <div class="xh8yej3 x5yr21d x78zum5 xdt5ytf x10wlt62" style="opacity: 1;">
-                                                                    
-                                                                    <div class="x1xmf6yo x11i5rnm x1e56ztr x1mh8g0r xz9dl7a xmns6w2 xq1608w xbbxn1n">
-                                                                        <div>
-                                                                            <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye x133cpev x1s688f x5n08af x1yc453h x4zkp8e x41vudc x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:30px;">
-                                                                                Búsqueda
-                                                                            </span>
-                                                                        </div>
-                                                                    </div>
-                                                                    
-                                                                </div>
-                                                            </div>
+                                                            <app-sidebarsearch></app-sidebarsearch>
                                                         </div>
                                                     <!-- / Barra lateral de búesqueda end -->
                                                 </div>
