--- a/src/styles.css
+++ b/src/styles.css
@@ -3222,5 +3222,87 @@ button._acat:hover {
     padding-right: 24px;
 }
 
+/* Notifications.. */
+.xwxc41k {
+    padding-bottom: 24px;
+}
+.x14ju556 {
+    line-height: 0;
+}
+.x1c436fg {
+    margin-bottom: 18px;
+}
+.xr12ei9 {
+    margin-right: 14px;
+}
+._acas:not(._acao), a._acas:not(._acao), a._acas:not(._acao):visited {
+    background-color: rgb(var(--ig-primary-button));
+    border: none;
+}
+.x1sgpng {
+    margin-top: 22px;
+}
+.xjm9jq1 {
+    height: 1px;
+}
+.x11mr3az {
+    background-color: rgb(var(--ig-separator));
+}
+hr {
+    background: #dadde1;
+    border-width: 0;
+    color: #dadde1;
+    height: 1px;
+}
+.x1q4h3jn {
+    contain: style layout paint;
+}
+.xn3w4p2 {
+    height: 44px;
+}
+.x187nhsf {
+    width: 44px;
+}
+.xy6v8t {
+    border-left: 2px solid rgb(var(--ig-primary-background));
+}
+.x6u7qqy {
+    border-right: 2px solid rgb(var(--ig-primary-background));
+}
+.x4y8mfe {
+    border-bottom-left-radius: 22px;
+}
+.x3jqge {
+    border-top-right-radius: 22px;
+}
+.x1t1qrwb {
+    bottom: -2px;
+}
+.x1ke7ulo {
+    border-top-left-radius: 22px;
+}
+.x1i7howy {
+    border-bottom-right-radius: 22px;
+}
+.x15jmxi0 {
+    right: -2px;
+}
+.x1yq40vb {
+    border-top: 2px solid rgb(var(--ig-primary-background));
+}
+.x1okoo6m {
+    border-bottom: 2px solid rgb(var(--ig-primary-background));
+}
 
-
+.xqwxr72 {
+    border-top-left-radius: 9999px;
+}
+.x2h3lcl {
+    border-bottom-right-radius: 9999px;
+}
+.x1v6yjtc {
+    border-top-right-radius: 9999px;
+}
+.x1d0d724 {
+    border-bottom-left-radius: 9999px;
+}
