--- a/src/styles.css
+++ b/src/styles.css
@@ -3293,7 +3293,6 @@ hr {
 .x1okoo6m {
     border-bottom: 2px solid rgb(var(--ig-primary-background));
 }
-
 .xqwxr72 {
     border-top-left-radius: 9999px;
 }
@@ -3305,4 +3304,49 @@ hr {
 }
 .x1d0d724 {
     border-bottom-left-radius: 9999px;
+}
+.xzi3mdb {
+    padding-top: 11px;
+}
+.xy80clv {
+    border-left-width: 1px;
+}
+.xxqof28 {
+    border-right-color: rgb(var(--grey-2));
+}
+.xxbrewl {
+    padding-bottom: 11px;
+}
+.xso031l {
+    border-bottom-width: 1px;
+}
+.xm81vs4 {
+    border-right-width: 1px;
+}
+.xlu9dua {
+    padding-left: 11px;
+}
+.xl4qmuc {
+    border-top-color: rgb(var(--grey-2));
+}
+.xiuebna {
+    border-left-color: rgb(var(--grey-2));
+}
+.xd18jyu {
+    border-bottom-color: rgb(var(--grey-2));
+}
+.x9jhf4c {
+    border-bottom-left-radius: 8px;
+}
+.x9f619 {
+    box-sizing: border-box;
+}
+.x3nfvp2 {
+    display: inline-flex;
+}
+.x1w2lkzu {
+    padding-right: 11px;
+}
+.x178xt8z {
+    border-top-width: 1px;
 }
